fix: changed workflow list scrollbar style

--- a/frontend/src/renderer/src/styles/components/_workflow-list.scss
+++ b/frontend/src/renderer/src/styles/components/_workflow-list.scss
@@ -1,14 +1,25 @@
 .workflow-list {
   width: 100%;
   height: 100%;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   gap: 1rem;
 
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+
+    &-thumb {
+      background-color: $surface-mixed-200;
+      border-radius: 1rem;
+    }
+  }
+
   &__item {
     width: 100%;
     height: 6rem;
+    min-height: 6rem;
     background-color: $surface-200;
     border-radius: 1.8rem;
     padding: 1rem 2rem;
